fix overflow on the prj-bar

--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -166,10 +166,10 @@
 }
 
 .prj {
-    height: 320px;
-    width: 100%;
+    height: 340px;
+    width: 80%;
     box-sizing: border-box;
-    padding: 9% 5% 9% 5%;
+    padding: 9% 2% 9% 2%;
 }
 
 .prj-hdr {
@@ -178,11 +178,10 @@
 }
 
 .prj-txt {
-    word-break: break-all;
-    overflow-wrap: break-word;
     font-family: 'Source Code Pro', monospace;
     color: RGB(123,138,148);
     margin-bottom: 3%;
+    text-align: left;
 }
 
 .prj-wnd {
@@ -192,6 +191,8 @@
     border-color: RGB(214,214,214);
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     opacity: 0.6;
+    border-radius: 10px 10px 10px 10px;
+    overflow: hidden;
 }
 
 .prj-bar {
